Dado - added noscroll and fixed overflow

--- a/DadoPopup.css
+++ b/DadoPopup.css
@@ -186,10 +186,12 @@ SOFTWARE.
 	grid-template-columns: 30% 70%;
 	padding-right: 30px;
 	max-height: 60vh;
-	overflow: auto;
 	overflow: overlay;
-	/* box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2); */
 	border-radius: 5px !important;
+}
+
+.dadoPopup-noscroll {
+	padding-right: 0 !important;
 }
 
 .dadoPopup-form label {
@@ -577,7 +579,7 @@ SOFTWARE.
 /* LOADING BAR */
 .loading-bar-info {
     width: 100%;
-	margin: 0 auto;
+	margin: 5px auto;
 }
 
 .loading-bar-container {
@@ -589,7 +591,7 @@ SOFTWARE.
 
 .loading-bar {
 	height: 40px;
-    width: 10%;
+    width: 0%;
     background-color: #00aa00;
 	border-radius: 5px 5px 5px 5px !important;
 }
